# unmanic

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioninfo.py
.github/workflows/: docker-build-push.yml  integration_test_and_build_all_packages_ci.yml  python_lint_and_run_unit_tests.yml
devops/: frontend_install.sh  gitlab-runner.sh  remove_cached_files.sh  run_docker.sh
docker/: Dockerfile  README.md  docker-compose-cifs.yml  docker-compose-ssl.yml  docker-compose-test.yml
docker/root/: entrypoint.sh
docs/: CONTRIBUTING.md  DEVELOPING.md  GENERATING_MASTER_RELEASE.md  PULL_REQUEST_TEMPLATE.md
examples/: distributed_worker_example.py
frontend-v3/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-v3/src/: App.vue
tests/: README.md  conftest.py
tests/integration/: __init__.py  test_taskhandler.py
tests/scripts_/: library_scan.sh  run_py_tests.sh  setup_tests.sh
tests/unit/: __init__.py  test_basemodel.py  test_bound_logger.py  test_common.py  test_config.py  test_directoryinfo.py  test_fileinfo.py  test_foreman.py  test_foreman_taskqueue.py  test_frontend_push_messages.py  test_gpu_api.py  test_gpu_manager.py  test_health_api.py  test_health_check.py  test_history.py  test_library.py  test_logs.py  test_metadata.py  test_notifications.py  test_plugin_settings.py  test_plugins.py  test_postprocessor.py  (+12 more)
unmanic/: __init__.py  config.py  metadata.py  service.py  version
(+191 files in other folders)
