[metadata]
name = unmanic
license = GPLv3
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True

[pycodestyle]
# TODO: Fix these errors
ignore = E722,E241,W293
max-line-length = 127
statistics = True
exclude = venv/**,.idea/**,dev_environment/**,dist/**
show-pep8 = False
show-source = False

[flake8]
# Ignored errors (to be fixed in Phase 1):
# E722: bare except (113 occurrences - Phase 1 priority)
# E241: multiple spaces after comma
# W293: blank line contains whitespace
# F401: imported but unused
# F403: star imports
# F405: may be undefined from star import
# F841: local variable assigned but never used
ignore = E722,E241,W293,F401,F403,F405,F841
max-line-length = 127
exclude = venv/**,.idea/**,dev_environment/**,dist/**,build/**,*.egg-info/**

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
no_strict_optional = True
# Gradual adoption - start with core modules
files = unmanic/libs/unmodels/**/*.py,unmanic/webserver/**/*.py

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
python_files = test_*.py
python_classes = Test*
python_functions = test_*
